# cvelistV5-poc

./: LICENSE  README.md  pyproject.toml
cvepoc/: __init__.py  base.py  main.py  process.py  utils.py
cvepoc/spark/: main.py
