[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cvelistV5-poc"
requires-python = ">=3.10"
dynamic = ["version"]

authors = [
    { name = "Yiran Lu", email = "yiranls@outlook.com" }
]
readme = "README.md"
license-files = ["LICENSE*"]
keywords = ["cve", "cvelist", "poc"]
dependencies = [
    "click>=8.3.0",
    "semver>=3.0.4",
]

[project.urls]
Repository = "https://github.com/CVEProject/cvelistV5.git"

[project.scripts]
cvepoc = "cvepoc.main:main_cli"

[project.optional-dependencies]
spark = [
    "pyspark==4.0.1",
]

[tool.setuptools]
packages = ["cvepoc"]

[tool.setuptools.dynamic]
version = {attr = "cvepoc.__version__"}
readme = {file = ["README.md"]}
